--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 14:05:03 2018</p>
+         Last Run: Wed Jul 25 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -33,31 +33,31 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>40</td>
-                        <td>44</td>
+                        <td>33</td>
+                        <td>45</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>21</td>
-                        <td>21</td>
-                        <td>33</td>
                         <td>47</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>65</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>19</td>
+                        <td>17</td>
                         <td>52</td>
                         <td>0</td>
                         <td>11</td>
@@ -69,24 +69,24 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>35</td>
+                        <td>33</td>
                         <td>59</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>61</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>39</td>
+                        <td>41</td>
                         <td>69</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>ESE</td>
-                        <td>58</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "21",
+                 "20",
                  "20",
                  "18",
                  "16"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "21",
+                 "20",
                  "20",
                  "18",
                  "16"
@@ -202,11 +202,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "40",
                  "33",
-                 "19",
-                 "35",
-                 "39"
+                 "21",
+                 "17",
+                 "33",
+                 "41"
                ]
              },
              {
@@ -214,7 +214,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
+                 "45",
                  "47",
                  "52",
                  "59",
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "65",
+                 "40",
+                 "72",
                  "70",
-                 "61",
-                 "58"
+                 "69",
+                 "65"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 14:05:04 2018</p>
+         Last Run: Wed Jul 25 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -272,12 +272,12 @@
                         <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>45</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>13</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -289,7 +289,7 @@
                         <td>5</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>16</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -301,7 +301,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>14</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -309,11 +309,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>7</td>
                         <td>11</td>
-                        <td>NNE</td>
-                        <td>11</td>
+                        <td>NE</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -321,11 +321,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>13</td>
                         <td>N</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -441,7 +441,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
+                 "0",
                  "0",
                  "0",
                  "0",
@@ -456,8 +456,8 @@
                  "45",
                  "38",
                  "35",
-                 "32",
-                 "31"
+                 "33",
+                 "32"
                ]
              },
              {
@@ -465,11 +465,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "9",
                  "13",
-                 "16",
-                 "14",
                  "11",
-                 "10"
+                 "9",
+                 "9"
                ]
              }
            ]
@@ -486,7 +486,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 14:05:04 2018</p>
+         Last Run: Wed Jul 25 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -508,10 +508,10 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>42</td>
-                        <td>41</td>
+                        <td>43</td>
                         <td>2</td>
                         <td>14</td>
                         <td>NE</td>
@@ -523,9 +523,9 @@
                         <td>23</td>
                         <td>23</td>
                         <td>44</td>
-                        <td>45</td>
+                        <td>47</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNE</td>
                         <td>50</td>
                      </tr>
@@ -535,23 +535,23 @@
                         <td>22</td>
                         <td>22</td>
                         <td>44</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>50</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>24</td>
-                        <td>57</td>
+                        <td>21</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>N</td>
-                        <td>55</td>
+                        <td>NNE</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -596,7 +596,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
+                 "24",
                  "23",
                  "22",
                  "20"
@@ -608,7 +608,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
+                 "24",
                  "23",
                  "22",
                  "20"
@@ -666,7 +666,7 @@
                  "42",
                  "44",
                  "44",
-                 "24"
+                 "21"
                ]
              },
              {
@@ -674,10 +674,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "41",
-                 "45",
-                 "50",
-                 "57"
+                 "43",
+                 "47",
+                 "51",
+                 "58"
                ]
              },
              {
@@ -687,8 +687,8 @@
                "data":[
                  "50",
                  "50",
-                 "50",
-                 "55"
+                 "52",
+                 "58"
                ]
              }
            ]
