--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 15:05:04 2018</p>
+         Last Run: Wed Jul 25 16:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -30,37 +30,37 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>33</td>
+                        <td>Partly Cloudy</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>15</td>
                         <td>45</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>40</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
                         <td>21</td>
-                        <td>47</td>
+                        <td>21</td>
+                        <td>15</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>72</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>17</td>
+                        <td>34</td>
                         <td>52</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>ESE</td>
                         <td>70</td>
                      </tr>
@@ -69,24 +69,24 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>33</td>
-                        <td>59</td>
+                        <td>46</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>69</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>41</td>
-                        <td>69</td>
+                        <td>43</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>ESE</td>
-                        <td>65</td>
+                        <td>10</td>
+                        <td>SE</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,8 +132,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "22",
                  "21",
-                 "20",
                  "20",
                  "18",
                  "16"
@@ -145,8 +145,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "22",
                  "21",
-                 "20",
                  "20",
                  "18",
                  "16"
@@ -202,11 +202,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "33",
-                 "21",
-                 "17",
-                 "33",
-                 "41"
+                 "15",
+                 "15",
+                 "34",
+                 "46",
+                 "43"
                ]
              },
              {
@@ -215,10 +215,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "45",
-                 "47",
+                 "49",
                  "52",
-                 "59",
-                 "69"
+                 "58",
+                 "70"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "40",
-                 "72",
+                 "50",
+                 "68",
                  "70",
-                 "69",
-                 "65"
+                 "65",
+                 "71"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 15:05:04 2018</p>
+         Last Run: Wed Jul 25 16:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -275,20 +275,20 @@
                         <td>0</td>
                         <td>45</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NNW</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
                         <td>38</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>N</td>
+                        <td>NNW</td>
                         <td>13</td>
                      </tr>
                      <tr>
@@ -318,8 +318,8 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
                         <td>32</td>
                         <td>6</td>
@@ -372,10 +372,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "23",
+                 "22",
                  "24",
                  "24",
-                 "25"
+                 "24"
                ]
              },
              {
@@ -385,10 +385,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "23",
+                 "22",
                  "24",
                  "24",
-                 "25"
+                 "24"
                ]
              }
            ]
@@ -465,7 +465,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
+                 "10",
                  "13",
                  "11",
                  "9",
@@ -486,7 +486,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 15:05:04 2018</p>
+         Last Run: Wed Jul 25 16:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -546,7 +546,7 @@
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>21</td>
+                        <td>20</td>
                         <td>58</td>
                         <td>0</td>
                         <td>16</td>
@@ -666,7 +666,7 @@
                  "42",
                  "44",
                  "44",
-                 "21"
+                 "20"
                ]
              },
              {
