--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 17:05:04 2018</p>
+         Last Run: Wed Jul 25 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -29,59 +29,47 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>06:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>15</td>
-                        <td>43</td>
-                        <td>2</td>
-                        <td>13</td>
-                        <td>ESE</td>
-                        <td>60</td>
-                     </tr>
-                     <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>10</td>
                         <td>ESE</td>
-                        <td>73</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>33</td>
-                        <td>51</td>
+                        <td>23</td>
+                        <td>52</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>10</td>
                         <td>ESE</td>
-                        <td>70</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>44</td>
-                        <td>58</td>
+                        <td>33</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>ESE</td>
-                        <td>65</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>38</td>
+                        <td>33</td>
                         <td>70</td>
                         <td>0</td>
                         <td>10</td>
@@ -119,7 +107,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM",
              "09:00 PM",
@@ -132,7 +119,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
                  "21",
                  "20",
                  "18",
@@ -145,7 +131,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
                  "21",
                  "20",
                  "18",
@@ -190,7 +175,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM",
              "09:00 PM",
@@ -203,10 +187,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "15",
-                 "15",
+                 "23",
                  "33",
-                 "44",
-                 "38"
+                 "33"
                ]
              },
              {
@@ -214,10 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
-                 "47",
-                 "51",
-                 "58",
+                 "48",
+                 "52",
+                 "59",
                  "70"
                ]
              },
@@ -226,10 +208,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
-                 "73",
-                 "70",
-                 "65",
+                 "67",
+                 "64",
+                 "59",
                  "71"
                ]
              }
@@ -248,7 +229,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 17:05:04 2018</p>
+         Last Run: Wed Jul 25 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -273,11 +254,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>4</td>
-                        <td>8</td>
-                        <td>NNW</td>
-                        <td>11</td>
+                        <td>10</td>
+                        <td>NW</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -288,8 +269,8 @@
                         <td>39</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>NNW</td>
-                        <td>15</td>
+                        <td>N</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -297,11 +278,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>N</td>
-                        <td>11</td>
+                        <td>NNE</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -309,23 +290,23 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>7</td>
                         <td>11</td>
                         <td>NE</td>
-                        <td>9</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
                         <td>32</td>
                         <td>6</td>
                         <td>13</td>
                         <td>N</td>
-                        <td>9</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,7 +356,7 @@
                  "23",
                  "24",
                  "24",
-                 "25"
+                 "24"
                ]
              },
              {
@@ -388,7 +369,7 @@
                  "23",
                  "24",
                  "24",
-                 "25"
+                 "24"
                ]
              }
            ]
@@ -453,10 +434,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
+                 "46",
                  "39",
-                 "34",
-                 "32",
+                 "35",
+                 "33",
                  "32"
                ]
              },
@@ -465,11 +446,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "15",
-                 "11",
-                 "9",
-                 "9"
+                 "12",
+                 "17",
+                 "16",
+                 "13",
+                 "11"
                ]
              }
            ]
@@ -486,7 +467,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 17:05:04 2018</p>
+         Last Run: Wed Jul 25 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
